--- a/train.ipynb
+++ b/train.ipynb
@@ -113,9 +113,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded checkpoint from best_model_v2.pt\n"
+     ]
+    }
+   ],
    "source": [
     "# model = get_model(**CONFIG['architechture'])\n",
     "# model = model.to(CONFIG['training']['device'])\n",
@@ -145,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
